filtered response from activity listing route
