# src/controllers/activitiesController.js
@@ -5,7 +5,7 @@ const Activity = require("../models/Activity");
 // @routes  GET /api/v1/activities
 // @access  public
 const getAllActivities = async (req, res) => {
-  const suggestedActivities = [];
+  let suggestedActivities = [];
 
   for (let i = 0; i < 3; i++) {
     const apiResponse = await axios.get(
@@ -13,8 +13,21 @@ const getAllActivities = async (req, res) => {
     );
     suggestedActivities.push(apiResponse.data);
   }
+  suggestedActivities = suggestedActivities.map((element) => ({
+    activity: element.activity,
+    type: element.type,
+  }));
+
+  console.log(suggestedActivities);
   const hardCodedActivities = await Activity.aggregate([
     { $sample: { size: 3 } },
+    {
+      $project: {
+        activity: 1,
+        type: 1,
+        _id: 0,
+      },
+    },
   ]);
 
   suggestedActivities.push(...hardCodedActivities);
